@@ -1,0 +1,11 @@
+Title: Fix broken Site status switching via sidebar snapin
+Level: 2
+Component: multisite
+Class: fix
+State: unknown
+Version: 1.2.5i1
+Date: 1387462864
+Targetversion: future
+
+The bug was introduced in 1.2.4b1 due to the new handling
+(and avoiding) of unneccessary livestatus connects.
